[tool.poetry]
name = "lstm_qoe"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.6"
h5py = "*"
numpy = "*"
scikit-learn = "*"
scipy = "*"
pandas = "*"
matplotlib = "*"
tensorflow = "1.13.1"
keras = "2.2.5"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-docstrings = "*"
flake8-rst-docstrings = "*"
pylint = "*"
black = "==19.3b0"
pre-commit = "*"
jupytext = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
